--- a/Biometric-Access-Control-System/Dockerfile
+++ b/Biometric-Access-Control-System/Dockerfile
@@ -1,8 +1,15 @@
-# Use the official Python image from the Docker Hub
+# Use the official Python slim image from the Docker Hub
 FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    default-libmysqlclient-dev \
+    build-essential \
+    pkg-config \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file into the container
 COPY requirements.txt .
@@ -13,12 +20,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code into the container
 COPY . .
 
-# Collect static files for production
-# RUN python manage.py collectstatic --noinput
-
 # Expose the port the app runs on
 EXPOSE 8000
 
 # Run migrations and then the Django development server
 CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+
 
